--- a/FilippoGadotti_TrabalhoFinal.ipynb
+++ b/FilippoGadotti_TrabalhoFinal.ipynb
@@ -31,7 +31,10 @@
         "id": "kWE3TrWAcuI9"
       },
       "source": [
-        "## Trabalho WIN\n",
+        "# Trabalho WIN\n",
+        "## Filippo Gadotti\n",
+        "### Fundacao Getulio Vargas\n",
+        "#### MBA Ciencias de dados, Faria Llima T6\n",
         "Notebook base para o trabalho individual de mini-índice"
       ]
     },
